--- a/projects/employeer/src/lib/candidate-list/candidate-list.component.html
+++ b/projects/employeer/src/lib/candidate-list/candidate-list.component.html
@@ -47,7 +47,7 @@
   
     <ng-container matColumnDef="details">
         <th mat-header-cell *matHeaderCellDef> View Entire Resume </th>
-        <td mat-cell *matCellDef="let element"> <button mat-button (click)="openDialog()">Click</button>
+        <td mat-cell *matCellDef="let element"> <button mat-button (click)="openDialog(element.resumeId)">Click</button>
         </td>
       </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
