--- a/projects/employeer/src/lib/posted-jobs/posted-jobs.component.html
+++ b/projects/employeer/src/lib/posted-jobs/posted-jobs.component.html
@@ -10,19 +10,16 @@
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
 
       <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-              <div>
-                  <img src="../../../../../src/assets/image_male.png" alt="Dummy" class="example-element-diagram">
-                </div>
-                <div class="example-element-description">
-                  {{element.jobDescription}}
-        
-                </div>
-                <div style="margin-right: 5%">
-                  <mat-checkbox>Shortlist</mat-checkbox>
-                </div>
+        <div>
+          <img src="../assets/image_male.png" alt="Dummy" class="example-element-diagram">
+        </div>
+        <div class="example-element-description">
+          {{element.jobDescription}}
+        </div>
+
       </div>
       <div class="example-element-list" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <emp-candidate-list [init]="element['jobId']"></emp-candidate-list>  
+        <emp-candidate-list [init]="element['jobId']" *ngIf="showCandidates"></emp-candidate-list>
       </div>
 
     </td>
@@ -32,6 +29,6 @@
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
     [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = element">
   </tr>
-  <td ><button>Delete</button></td>
+  <td><button>Delete</button></td>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
