--- a/projects/employeer/src/lib/shortlisted-candidates/shortlisted-candidates.component.html
+++ b/projects/employeer/src/lib/shortlisted-candidates/shortlisted-candidates.component.html
@@ -1,16 +1,52 @@
-
+<!--
 
 <table mat-table [dataSource]="datas" class="mat-elevation-z8">
     <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
       <th mat-header-cell *matHeaderCellDef> {{column}} </th>
       <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-      <td mat-cell *matCellDef="let element"> <button class="btn btn-danger" (click)="removeColumn()"> Remove column </button> </td>
     
     </ng-container>
-  
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell >  <button class="btn btn-danger" (click)="removeColumn()">Delete</button>  </td>
+      </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
     <tr mat-row *matRowDef="let row; columns: columnsToDisplay;">
-  
         
     </tr>
   </table>
+-->
+<table mat-table [dataSource]="datas" class="mat-elevation-z8">
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="serialno">
+    <th mat-header-cell *matHeaderCellDef> Serial No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.serialno}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="jobId">
+    <th mat-header-cell *matHeaderCellDef> Job Application ID </th>
+    <td mat-cell *matCellDef="let element"> {{element.jobId}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="resumeId">
+    <th mat-header-cell *matHeaderCellDef> Resume ID </th>
+    <td mat-cell *matCellDef="let element"> {{element.resumeId}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Action </th>
+
+    <mat-cell *matCellDef="let row; let i=index;">
+      <button mat-icon-button color="accent">
+        <mat-icon aria-label="Delete" (click)="deleteShortlist(datas[i].resumeId)">delete</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
