seeker dashboard added

--- a/projects/seeker/src/lib/dialog/add/add.component.html
+++ b/projects/seeker/src/lib/dialog/add/add.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <h3 mat-dialog-title>Add new Issue</h3>
+  <h3 mat-dialog-title>Add new Detail</h3>
 
-  <form class="mat-dialog-content" (ngSubmit)="submit" #formControl="ngForm">
+  <form class="mat-dialog-content" (ngSubmit)="submit()" #formControl="ngForm">
 
     <div class="form">
       <mat-form-field color="accent">
@@ -13,15 +13,18 @@
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <textarea matInput #input class="form-control" placeholder="Title" [(ngModel)]="data.title" name="title" required ></textarea>
-        <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+        <mat-select #inputstate [(ngModel)]="data.level" placeholder="Degree" name="level">
+          <mat-option *ngFor="let degree of Classes" [value]="degree">
+            {{ degree }}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
 
     <!--Contains mat-hint for characters count and has maxLengt set-->
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #inputstate class="form-control" placeholder="State" [(ngModel)]="data.state" name="state" maxlength="10" required >
+        <input matInput #inputstate class="form-control" placeholder="Board" [(ngModel)]="data.board" name="board" maxlength="10" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
         <mat-hint align="end">{{inputstate.value?.length || 0}}/10</mat-hint>
       </mat-form-field>
@@ -29,19 +32,33 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Url" [(ngModel)]="data.url" name="url">
+        <input matInput  #input placeholder="Institute Name" [(ngModel)]="data.instituteName" name="insName">
+      </mat-form-field>
+    </div>
+
+    <div class="form">
+        <mat-form-field color="accent">
+      <input matInput  #input placeholder="Score" type="number" [(ngModel)]="data.marks" name="marks">
+      <mat-hint align="start">% or cgpa </mat-hint>
+      
+      </mat-form-field>
+    
+
+    </div>
+
+    <div class="form">
+      <mat-form-field color="accent">
+        <input matInput  #input [min]="minDate" [max]="maxDate" [matDatepicker]="start" placeholder="Started_at" [(ngModel)]="data.started_at" name="start" required>
+        <mat-datepicker-toggle matSuffix [for]="start"> <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon></mat-datepicker-toggle>
+        <mat-datepicker #start></mat-datepicker>
       </mat-form-field>
     </div>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Created at" [(ngModel)]="data.created_at" name="created_at">
-      </mat-form-field>
-    </div>
-
-    <div class="form">
-      <mat-form-field color="accent">
-        <input matInput placeholder="Updated at" [(ngModel)]="data.updated_at" name="updated_at">
+        <input matInput   #input [min]="minDate" [max]="maxDate" [matDatepicker]="end" placeholder="Ended_at" [(ngModel)]="data.ended_at" name="end" required>
+        <mat-datepicker-toggle matSuffix [for]="end"> <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon></mat-datepicker-toggle>
+        <mat-datepicker #end></mat-datepicker>
       </mat-form-field>
     </div>
 
