--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer>
   
-  <nav class="navbar navbar-dark bg-dark  navbar-fixed-bottom">
+  <nav class="navbar navbar-dark bg-dark  fixed-bottom">
 <a class="logo-font" routerLink="/">TopJobs</a>
 <div class="navbar-expand m-auto navbar-text">
   &copy; {{ today | date: 'yyyy' }}.
-  Made with <i class="fa fa-heart"></i> by<a href="">Team #1</a>.
+  Made with <i class="fa fa-heart"></i> by<a href="">Team SONS OF BIT</a>.
   
 </div>
 </nav>
