--- a/projects/employeer/src/lib/shortlisted-candidates/shortlisted-candidates.component.css
+++ b/projects/employeer/src/lib/shortlisted-candidates/shortlisted-candidates.component.css
@@ -6,3 +6,12 @@ table {
   button {
     margin: em auto;
   }
+  h1{
+    text-align: center;
+    margin:5% auto;
+    text-align: center;
+
+  }
+  mat-icon{
+    color: black;
+  }
