--- a/projects/employeer/src/lib/candidate-list/candidate-list.component.html
+++ b/projects/employeer/src/lib/candidate-list/candidate-list.component.html
@@ -32,7 +32,7 @@
     </ng-container>
   
     <ng-container matColumnDef="details">
-        <th mat-header-cell *matHeaderCellDef> View Entire Resume </th>
+        <th mat-header-cell *matHeaderCellDef> View Resume </th>
         <td mat-cell *matCellDef="let element"> <button mat-button (click)="openDialog(element.resumeId)">Click</button>
         </td>
       </ng-container>
