--- a/projects/employeer/src/lib/posted-jobs/posted-jobs.component.html
+++ b/projects/employeer/src/lib/posted-jobs/posted-jobs.component.html
@@ -1,9 +1,41 @@
+
+    <h1>Jobs Posted</h1>
+
+
+
 <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
-  <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay;let c of columNames">
+  <!-- <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay;let c of columnNames">
     <th mat-header-cell *matHeaderCellDef> {{c}} </th>
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+  </ng-container> -->
+  <ng-container matColumnDef="jobId">
+    <th mat-header-cell *matHeaderCellDef> Job ID </th>
+    <td mat-cell *matCellDef="let element"> {{element.jobId}} </td>
   </ng-container>
-
+  <ng-container matColumnDef="noOfOpenings">
+    <th mat-header-cell *matHeaderCellDef> No of Openings </th>
+    <td mat-cell *matCellDef="let element"> {{element.noOfOpenings}} </td>
+  </ng-container>
+  <ng-container matColumnDef="jobProfile">
+    <th mat-header-cell *matHeaderCellDef> Job Profile </th>
+    <td mat-cell *matCellDef="let element"> {{element.jobProfile}} </td>
+  </ng-container>
+  <ng-container matColumnDef="location">
+    <th mat-header-cell *matHeaderCellDef> Location </th>
+    <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+  </ng-container>
+  <ng-container matColumnDef="companyName">
+    <th mat-header-cell *matHeaderCellDef> Company Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.companyName}} </td>
+  </ng-container>
+  <ng-container matColumnDef="noOfApplicants">
+      <th mat-header-cell *matHeaderCellDef> No Of Applicants </th>
+      <td mat-cell *matCellDef="let element"> {{element.noOfApplicants}} </td>
+    </ng-container>
+  <ng-container matColumnDef="action" >
+      <th mat-header-cell *matHeaderCellDef> Delete </th>
+      <td mat-cell *matCellDef="let element"><mat-icon (click)="deleteJobApplication(element.jobId)">delete</mat-icon> </td>
+    </ng-container>
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
 
   <ng-container matColumnDef="expandedDetail">
@@ -29,6 +61,5 @@
   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
     [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = element">
   </tr>
-  <td><button>Delete</button></td>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
