--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
 
-  <nav class="navbar navbar-dark bg-dark  navbar-fixed-bottom">
+  <nav class="navbar navbar-dark bg-dark  fixed-bottom">
     
     <div class="navbar-expand m-auto navbar-text">
       &copy; {{ today | date: 'yyyy' }}.
