--- a/projects/seeker/src/lib/forms/basicinfo/basicinfo.component.html
+++ b/projects/seeker/src/lib/forms/basicinfo/basicinfo.component.html
@@ -2,6 +2,12 @@
 <mat-card>
 	<form [formGroup]="firstFormGroup">
 
+
+      <mat-toolbar color="primary">
+          <span>Personal Details</span>
+          </mat-toolbar>
+
+
       <mat-card id="basic">
           <mat-card-title>
           </mat-card-title>
