--- a/projects/seeker/src/lib/forms/educationdetailsform/educationdetailsform.component.html
+++ b/projects/seeker/src/lib/forms/educationdetailsform/educationdetailsform.component.html
@@ -1,1 +1,173 @@
-<p> Bhaiya I'm working</p>
+<mat-card>
+    <form [formGroup]="thirdFormGroup">
+            <mat-card-title>
+                    <mat-toolbar color="primary">
+                      <span>Education Details</span>
+                      <span class="spacer"></span>
+                      Reload data:
+                      <button mat-icon-button (click)="refresh()">
+                        <mat-icon>refresh</mat-icon>
+                      </button>
+                    </mat-toolbar>
+                  </mat-card-title>
+                
+                  <mat-card-content>
+                
+                
+                
+                
+                    <div class="container mat-elevation-z8">
+                
+               <!--       <div class="form">
+                        <mat-form-field floatPlaceholder="never" color="accent">
+                          <input matInput #filter placeholder="Filter issues">
+                        </mat-form-field>
+                      </div>
+                -->
+                
+                
+                      <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
+                
+                        <!--- Note that these columns can be defined in any order.
+                                  The actual rendered columns are set as a property on the row definition" -->
+                
+                        <!-- ID Column -->
+                        <ng-container matColumnDef="id">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
+                          <mat-cell *matCellDef="let row">{{row.eduID}}</mat-cell>
+                        </ng-container>
+                
+                        <ng-container matColumnDef="level">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>Degree</mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.degree}}</mat-cell>
+                        </ng-container>
+                
+                        <ng-container matColumnDef="board">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>Board</mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.board}}</mat-cell>
+                        </ng-container>
+                
+                        <ng-container matColumnDef="instituteName">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>Institue Name</mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.institution}}</mat-cell>
+                        </ng-container>
+                
+                        <ng-container matColumnDef="marks">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>Score</mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.score}}</mat-cell>
+                        </ng-container>
+                
+                        <ng-container matColumnDef="started_at">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>Start Date</mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.startdate}}</mat-cell>
+                        </ng-container>
+                
+                        <ng-container matColumnDef="ended_at">
+                          <mat-header-cell *matHeaderCellDef mat-sort-header>End Date</mat-header-cell>
+                          <mat-cell *matCellDef="let row"> {{row.enddate}}</mat-cell>
+                        </ng-container>
+                
+                        <!-- actions -->
+                        <ng-container matColumnDef="actions">
+                          <mat-header-cell *matHeaderCellDef>
+                            <button mat-icon-button color="primary" (click)="addNew()">
+                              <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+                            </button>
+                          </mat-header-cell>
+                
+                          <mat-cell *matCellDef="let row; let i=index;">
+                            <button mat-icon-button color="accent" (click)="startEdit(i, row.id, row.level, row.board, row.instituteName, row.marks, row.started_at, row.ended_at)">
+                              <mat-icon aria-label="Edit">edit</mat-icon>
+                            </button>
+                
+                            <button mat-icon-button color="accent" (click)="deleteItem(i, row.id, row.level, row.board, row.instituteName, row.marks, row.started_at, row.ended_at)">
+                              <mat-icon aria-label="Delete">delete</mat-icon>
+                            </button>
+                          </mat-cell>
+                        </ng-container>
+                
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                      </mat-table>
+                
+                
+                      <div class="no-results" [style.display]="dataSource.renderedData.length == 0 ? '' : 'none'">
+                        No results
+                      </div>
+                      <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="10"
+                        [pageSizeOptions]="[5, 10, 25, 100]">
+                      </mat-paginator>
+                
+                
+                    </div>
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+           
+            <!--chip auto complete-->
+
+
+
+            <mat-card>
+                <mat-card-title>SkillSet</mat-card-title>
+                <mat-card-content>
+
+                    <mat-form-field class="skilllist">
+                        <mat-chip-list #chipList>
+                            <mat-chip *ngFor="let skill of skills" [selectable]="selectable" [removable]="removable"
+                                (removed)="remove(skill)">
+                                {{skill}}
+                                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                            </mat-chip>
+                            <input placeholder="Add SKill" #fruitInput [formControl]="skillCtrl" [matAutocomplete]="auto"
+                                [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="add($event)">
+                        </mat-chip-list>
+                        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+                            <mat-option *ngFor="let skill of filteredSkills | async" [value]="skill">
+                                {{skill}}
+                            </mat-option>
+                        </mat-autocomplete>
+                    </mat-form-field>
+                </mat-card-content>
+            </mat-card>
+
+
+        </mat-card-content>
+
+        <div>
+            <button mat-button matStepperPrevious>Back</button>
+            <button mat-button matStepperNext>Next</button>
+        </div>
+    </form>
+
+</mat-card>
