--- a/projects/seeker/src/lib/jobs/jobs.component.css
+++ b/projects/seeker/src/lib/jobs/jobs.component.css
@@ -6,13 +6,21 @@
     border-radius: 2px;
     padding: 10em auto;
     margin: 5em auto;
-    background-color: #f5f5f5;
+   
   }
+  .container{
+    width:90%;
+   
+    background-color: #f5f5f5;
+  }  
   
+  .serach{
 
-  mat-card{
-    width:60%;
     
+  }
+  mat-card{
+    width:80%;
+    position: relative;
     align-content: center;
     max-width: 1100px;
     
@@ -22,6 +30,7 @@
 
   mat-expansion-panel
 {
-  width: 30%;
+
+  width: 50%;
    height: 10%;
 }
