--- a/projects/seeker/src/lib/jobs/jobs.component.html
+++ b/projects/seeker/src/lib/jobs/jobs.component.html
@@ -16,7 +16,7 @@
 
     <mat-card>
       <mat-card-title>Company : {{x.jobtitle}}</mat-card-title>
-      <mat-card-content> <i>Role: {{x.Perks}}</i>
+      <mat-card-content> <p>Role: {{x.Perks}}</p>
         
 
         <p>
