--- a/projects/seeker/src/lib/dialog/add/add.component.html
+++ b/projects/seeker/src/lib/dialog/add/add.component.html
@@ -5,7 +5,7 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.id" name="id" required >
+        <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.eduID" name="id" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -13,7 +13,7 @@
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <mat-select #inputstate [(ngModel)]="data.level" placeholder="Degree" name="level">
+        <mat-select #inputstate [(ngModel)]="data.degree" placeholder="Degree" name="level">
           <mat-option *ngFor="let degree of Classes" [value]="degree">
             {{ degree }}
           </mat-option>
@@ -32,13 +32,13 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput  #input placeholder="Institute Name" [(ngModel)]="data.instituteName" name="insName">
+        <input matInput  #input placeholder="Institute Name" [(ngModel)]="data.institution" name="insName">
       </mat-form-field>
     </div>
 
     <div class="form">
         <mat-form-field color="accent">
-      <input matInput  #input placeholder="Score" type="number" [(ngModel)]="data.marks" name="marks">
+      <input matInput  #input placeholder="Score" type="number" [(ngModel)]="data.score" name="marks">
       <mat-hint align="start">% or cgpa </mat-hint>
       
       </mat-form-field>
@@ -48,7 +48,7 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput  #input [min]="minDate" [max]="maxDate" [matDatepicker]="start" placeholder="Started_at" [(ngModel)]="data.started_at" name="start" required>
+        <input matInput  #input [min]="minDate" [max]="maxDate" [matDatepicker]="start" placeholder="Started_at" [(ngModel)]="data.startdate" name="start" required>
         <mat-datepicker-toggle matSuffix [for]="start"> <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon></mat-datepicker-toggle>
         <mat-datepicker #start></mat-datepicker>
       </mat-form-field>
@@ -56,7 +56,7 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput   #input [min]="minDate" [max]="maxDate" [matDatepicker]="end" placeholder="Ended_at" [(ngModel)]="data.ended_at" name="end" required>
+        <input matInput   #input [min]="minDate" [max]="maxDate" [matDatepicker]="end" placeholder="Ended_at" [(ngModel)]="data.enddate" name="end" required>
         <mat-datepicker-toggle matSuffix [for]="end"> <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon></mat-datepicker-toggle>
         <mat-datepicker #end></mat-datepicker>
       </mat-form-field>
