--- a/projects/seeker/src/lib/dialog/add/add.component.html
+++ b/projects/seeker/src/lib/dialog/add/add.component.html
@@ -5,7 +5,7 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.id" name="id" required >
+        <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.eduID" name="id" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -13,7 +13,7 @@
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <mat-select #inputstate [(ngModel)]="data.level" placeholder="Degree" name="level">
+        <mat-select #inputstate [(ngModel)]="data.degree" placeholder="Degree" name="level">
           <mat-option *ngFor="let degree of Classes" [value]="degree">
             {{ degree }}
           </mat-option>
@@ -32,13 +32,13 @@
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput  #input placeholder="Institute Name" [(ngModel)]="data.instituteName" name="insName">
+        <input matInput  #input placeholder="Institute Name" [(ngModel)]="data.institution" name="insName">
       </mat-form-field>
     </div>
 
     <div class="form">
         <mat-form-field color="accent">
-      <input matInput  #input placeholder="Score" type="number" [(ngModel)]="data.marks" name="marks">
+      <input matInput  #input placeholder="Score" type="number" [(ngModel)]="data.score" name="marks">
       <mat-hint align="start">% or cgpa </mat-hint>
       
       </mat-form-field>
