--- a/projects/seeker/src/lib/forms/educationdetailsform/educationdetailsform.component.html
+++ b/projects/seeker/src/lib/forms/educationdetailsform/educationdetailsform.component.html
@@ -1,13 +1,13 @@
 <mat-card>
-    <form [formGroup]="thirdFormGroup">
+    
             <mat-card-title>
                     <mat-toolbar color="primary">
                       <span>Education Details</span>
-                      <span class="spacer"></span>
+                      <!-- <span class="spacer"></span>
                       Reload data:
                       <button mat-icon-button (click)="refresh()">
                         <mat-icon>refresh</mat-icon>
-                      </button>
+                      </button> -->
                     </mat-toolbar>
                   </mat-card-title>
                 
@@ -136,7 +136,7 @@
             <!--chip auto complete-->
 
 
-
+<!-- 
             <mat-card>
                 <mat-card-title>SkillSet</mat-card-title>
                 <mat-card-content>
@@ -159,7 +159,7 @@
                         </mat-autocomplete>
                     </mat-form-field>
                 </mat-card-content>
-            </mat-card>
+            </mat-card> -->
 
 
         </mat-card-content>
@@ -168,6 +168,6 @@
             <button mat-button matStepperPrevious>Back</button>
             <button mat-button matStepperNext>Next</button>
         </div>
-    </form>
+    
 
 </mat-card>
