--- a/projects/seeker/src/lib/forms/experiencedetailsform/experiencedetailsform.component.css
+++ b/projects/seeker/src/lib/forms/experiencedetailsform/experiencedetailsform.component.css
@@ -9,7 +9,8 @@ h1{
 }
 
   
-  th.mat-sort-header-sorted {
+  
+  mat-icon{
     color: black;
   }
 
@@ -31,7 +32,7 @@ h1{
 
   .mat-toolbar{
     margin: 2em auto;
-    background: black;
+   ;
   }
 
   .mat-cell:nth-child(1),
