--- a/projects/seeker/src/lib/forms/experiencedetailsform/experiencedetailsform.component.html
+++ b/projects/seeker/src/lib/forms/experiencedetailsform/experiencedetailsform.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-<form [formGroup]="thirdFormGroup">
+
   
     <div *ngIf="isLoaded">
         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
@@ -8,11 +8,11 @@
     </div>
     
     <mat-toolbar color="primary">
-        <span>Education Details</span>
+        <span>Experience Details</span>
         </mat-toolbar>
     
       <button mat-raised-button (click)="show()">
-        <mat-icon color="accent">add</mat-icon> Add Detail
+        <mat-icon >add</mat-icon> Add Detail
       </button>
       <br>
     
@@ -166,7 +166,7 @@
             <th mat-header-cell *matHeaderCellDef> </th>
             <td mat-cell *matCellDef="let element">
               <button mat-icon-button (click)="openDialog(element)">
-                <mat-icon color="accent">delete</mat-icon> 
+                <mat-icon>delete</mat-icon> 
               </button>
             </td>
           </ng-container>
@@ -182,5 +182,5 @@
     <button mat-button matStepperPrevious>Back</button>
     <button mat-button matStepperNext>Next</button>
   </div>
-</form>
+
 </mat-card>
