basic ui changes

--- a/projects/seeker/src/lib/forms/educationdetailsform/educationdetailsform.component.html
+++ b/projects/seeker/src/lib/forms/educationdetailsform/educationdetailsform.component.html
@@ -1,5 +1,6 @@
 <mat-card>
-    <form [formGroup]="thirdFormGroup">
+    
+
             <mat-card-title>
                     <mat-toolbar color="primary">
                       <span>Education Details</span>
@@ -137,7 +138,7 @@
 
 
 
-            <mat-card>
+            <!-- <mat-card>
                 <mat-card-title>SkillSet</mat-card-title>
                 <mat-card-content>
 
@@ -161,13 +162,13 @@
                 </mat-card-content>
             </mat-card>
 
-
-        </mat-card-content>
+-->
+        </mat-card-content> 
 
         <div>
             <button mat-button matStepperPrevious>Back</button>
             <button mat-button matStepperNext>Next</button>
         </div>
-    </form>
+    
 
 </mat-card>
