--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,10 @@
-
-
-<section class="container">
-  <div class="left-half">
-    <article>
-      <h1>Looking For Job?</h1>
-      <p> <a (click)="routeSlogin()">
-        <i class="fa fa-store"></i>
-        Seeker Login
-      </a></p>
-    </article>
+<div class="container">
+    <div class="split left">
+      <h1>The Designer</h1>
+      <a href="#" class="button">Read More</a>
+    </div>
+    <div class="split right">
+      <h1>The Programmer</h1>
+      <a href="#" class="button">Read More</a>
+    </div>
   </div>
-  <div class="right-half">
-    <article>
-      <h1>Looking for Right Candidate?</h1>
-      <p> <a (click)="routeElogin()">
-        <i class="fa fa-chart-bar"></i>
-        Employeer Login
-      </a></p>
-    </article>
-  </div>
-</section>
-
