--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,11 +1,14 @@
 <footer>
 
-  <nav class="navbar navbar-dark bg-dark  navbar-fixed-bottom">
-    
-    <div class="navbar-expand m-auto navbar-text">
+  <div class="container">
+    <a class="logo-font">topJobs</a>
+    <span class="attribution">
+      &copy; {{ today | date: 'yyyy' }}.
+
       &copy; {{ today | date: 'yyyy' }}.
       Made with <i class="fa fa-heart"></i> by<a href="">Team #1</a>.
+    </span>
+  </div>
 
-    </div>
-  </nav>
+
 </footer>
