--- a/projects/seeker/src/lib/jobs/jobs.component.css
+++ b/projects/seeker/src/lib/jobs/jobs.component.css
@@ -8,21 +8,19 @@
     margin: 5em auto;
    
   }
-  .container{
-    width:90%;
-   
-    background-color: #f5f5f5;
-  }  
+ 
   
-  .serach{
+  .search{
 
     
   }
   mat-card{
     width:80%;
+   
+    margin: 5em auto;
     position: relative;
     align-content: center;
-    max-width: 1100px;
+    background-color: #f5f5f5;
     
 
   }
@@ -30,7 +28,14 @@
 
   mat-expansion-panel
 {
-   margin: auto 2em;
+   margin: 2em 2em;
+ 
    width: 90%;
-   height: 10%;
+   
+}
+
+mat-grid-list{
+ height:30%;
+
+
 }
