--- a/projects/seeker/src/lib/dialog/delete/delete.component.html
+++ b/projects/seeker/src/lib/dialog/delete/delete.component.html
@@ -1,19 +1,19 @@
 <div class="container">
   <h3 mat-dialog-title>Are you sure?</h3>
   <div mat-dialog-content>
-    Id: {{data.id}}
+    Id: {{data.eduID}}
     <p></p>
-    Degree: {{data.level}}
+    Degree: {{data.degree}}
     <p></p>
-    Score: {{data.marks}}
+    Score: {{data.score}}
     <p></p>
-    Institute Name: {{data.institute}}
+    Institute Name: {{data.institution}}
     <p></p>
     Board: {{data.board}}
     <p></p>
-    Started: {{data.started_at}}
+    Started: {{data.startdate}}
     <p></p>
-    Ended: {{data.ended_at}}
+    Ended: {{data.enddate}}
     <p></p>
   </div>
 
