--- a/projects/slogin/src/lib/login/login.component.css
+++ b/projects/slogin/src/lib/login/login.component.css
@@ -1,19 +1,18 @@
-.body{
-    content: '';
-    display: inline;
-    margin: 0;
-    padding: 0;
-    background: grey;
+
+.container{
+  position:fixed;
+  width: 100%;
+  height: 100%;
+  background: grey;
 }
 
-.mat-tab-nav-bar{
-  margin: 5em 20em;
-  width:20em;
-}
+
+
 
 .mat-card{
+    position: fixed;
     width: 20em;
-    margin: auto 20em;
+    margin: 10em 25em;
     background: whitesmoke;
 }
 form {
