--- a/projects/slogin/src/lib/signup/signup.component.html
+++ b/projects/slogin/src/lib/signup/signup.component.html
@@ -1,8 +1,8 @@
-
+<div class="container">
 <mat-card>
-  <mat-card-title>
+  <!-- <mat-card-title>
 
-<!--     
+    
     <mat-card-header align="end">
 
         <div class="row">
@@ -15,9 +15,9 @@
         </div>
      </div>
     
-    </mat-card-header> -->
+    </mat-card-header>
     
-  </mat-card-title>
+  </mat-card-title> -->
 
 
 
@@ -26,7 +26,7 @@
     
  <mat-card-content>
     
-      <h2 class="section-title">User details</h2>
+      <h3 class="section-title">User details</h3>
       <form [formGroup]="userDetailsForm" (keydown)="keyDownFunction($event)">
         <mat-form-field class="full-width">
           <input matInput placeholder="First Name" formControlName="firstname" required>
@@ -76,9 +76,10 @@
           </mat-error>
         </div>
       
+    
        <br><br>
-
-        <mat-form-field class="full-width">
+      
+       <mat-form-field class="full-width">
           <textarea matInput maxlength="256" placeholder="Profile" formControlName="bio" matTextareaAutosize matAutosizeMinRows="3" matAutosizeMaxRows="6"></textarea>
           <mat-hint align="start">Tell us about yourself</mat-hint>
           <mat-hint align="end">{{userDetailsForm.get('bio').value.length}} / 256</mat-hint>
@@ -126,11 +127,11 @@
           </mat-form-field>
       </div>
     </div>
-       
+    
 
      
  
-    
+     
 
         <mat-form-field class="full-width">
           <input matInput maxlength="25" placeholder="Username" formControlName="username" required>
@@ -170,17 +171,12 @@
           <mat-error  class="error-message" *ngIf="userDetailsForm.get('terms').hasError(validation.type) && (userDetailsForm.get('terms').dirty || userDetailsForm.get('terms').touched)">{{validation.message}}</mat-error>
         </mat-error>
       
+      <button class="submit-btn" color="primary" mat-raised-button type="submit" (click)="onSubmit(userDetailsForm.value)">
+          Submit
+        </button>
       </form>
        
     </mat-card-content>
-
-    <mat-card-actions align="end">
-        <button class="submit-btn" color="primary" mat-raised-button type="submit" (click)="onSubmit(userDetailsForm.value)">
-          Submit
-        </button>
-    </mat-card-actions>
-    
-    
-    
 </mat-card>
 
+</div>
