--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
-<section class="container">
+<!-- <section class="container">
     <div class="left-half">
       <article>
         <h1>Looking For Job?</h1>
         <p> <a (click)="routeSlogin()">
-          <i class="fa fa-store"></i>
+          
           Seeker Login
         </a></p>
       </article>
@@ -12,9 +12,20 @@
       <article>
         <h1>Looking for Right Candidate?</h1>
         <p> <a (click)="routeElogin()">
-          <i class="fa fa-chart-bar"></i>
+         
           Employeer Login
         </a></p>
       </article>
     </div>
-  </section>
+  </section> -->
+
+  <div class="container">
+      <div class="split left">
+        <h1>The Job Seeker</h1>
+        <a  (click)="routeSlogin()" class="button"><i>Click Here</i></a>
+      </div>
+      <div class="split right">
+        <h1>The Employer</h1>
+        <a (click)="routeElogin()" class="button">Click Here</a>
+      </div>
+    </div>
