--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,8 @@
 @import "~font-awesome/css/font-awesome.css";
 
 
+.parentelement { position: relative; }
+ .parentelement ngx-loading-bar { display: block; } 
+ .parentelement ngx-loading-bar #loading-bar-spinner { position: absolute; top: 30em; left: 30%; }
+  .parentelement ngx-loading-bar #loading-bar .bar { position: absolute; } 
+  .parentelement ngx-loading-bar #loading-bar .bar .peg { display: none; }
