--- a/projects/seeker/src/lib/dialog/edit/edit.component.html
+++ b/projects/seeker/src/lib/dialog/edit/edit.component.html
@@ -3,12 +3,12 @@
 
   <form class="mat-dialog-content" (ngSubmit)="submit()" #formControl="ngForm">
 
-    <div class="form">
+    <!-- <div class="form">
       <mat-form-field color="accent">
         <input matInput #input class="form-control" placeholder="Id" [(ngModel)]="data.eduID" name="id" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
-    </div>
+    </div> -->
 
     <!--Textarea for demo purposes-->
     <div class="form">
