--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -10,23 +10,31 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
   
-            <li class="nav-item">
+            <li class="nav-item" >
                 <a class="nav-link"
-                  routerLink="/home"
-                  routerLinkActive="active"
-                  [routerLinkActiveOptions]="{ exact: true }">
+                    (click)="navHome()">
                   Home
                 </a>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item" *ngIf="home">
                 <a class="nav-link"
-                  routerLink="/alogin"
-                  routerLinkActive="active"
-                  [routerLinkActiveOptions]="{ exact: true }">
+                  (click)="navAdmin()">
                   Admin
                 </a>
               </li>
+              <li class="nav-item" *ngIf="home">
+                <a class="nav-link"
+                (click)="navEmployer()">
+                  Employer
+                </a>
+              </li>
+              <li class="nav-item" *ngIf="home">
+                <a class="nav-link" (click)="navSeeker()">
+                  Job Seeker
+                </a>
+              </li>
+
   <!--        
           <li class="nav-item">
               <a class="nav-link"
