--- a/src/app/admin/admindashboard/admindashboard.component.css
+++ b/src/app/admin/admindashboard/admindashboard.component.css
@@ -6,5 +6,12 @@
     background: rgb(24, 23, 23);
 }
 .app-sidenav{
-    background:rgb(22, 22, 22);
+    background:#ffffff
+}
+mat-sidenav{
+    color: azure;
+}
+
+mat-sidenav-container{
+    margin-top: 10%;    
 }
