--- a/src/app/admin/view-all-employers/view-all-employers.component.html
+++ b/src/app/admin/view-all-employers/view-all-employers.component.html
@@ -3,15 +3,15 @@
 
 
     <!-- Position Column -->
-    <ng-container matColumnDef="resumeId">
+    <ng-container matColumnDef="firstName">
       <th mat-header-cell *matHeaderCellDef> First Name </th>
       <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
     </ng-container>
   
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="lastName">
       <th mat-header-cell *matHeaderCellDef> Last Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.lasteName}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
     </ng-container>
   
     <!-- Weight Column -->
@@ -19,10 +19,13 @@
       <th mat-header-cell *matHeaderCellDef> Email </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
-  
-  xx -->
-      <ng-container matColumnDef="details">
-          <th mat-header-cell *matHeaderCellDef> View Details </th>
+    <ng-container matColumnDef="empId">
+      <th mat-header-cell *matHeaderCellDef> Employee ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.empId}} </td>
+    </ng-container>
+
+      <ng-container matColumnDef="password">
+          <th mat-header-cell *matHeaderCellDef> Password </th>
           <td mat-cell *matCellDef="let element"> <button mat-button (click)="delete()">Delete</button>
           </td>
         </ng-container>
