--- a/src/app/admin/view-all-employers/view-all-employers.component.html
+++ b/src/app/admin/view-all-employers/view-all-employers.component.html
@@ -32,8 +32,8 @@
           </td>
         </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <!-- <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        (click)="selection.toggle(row)">
-    </tr> -->
+     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+       >
+    </tr> 
   </table>
    
