--- a/projects/seeker/src/lib/forms/experiencedetailsform/experiencedetailsform.component.html
+++ b/projects/seeker/src/lib/forms/experiencedetailsform/experiencedetailsform.component.html
@@ -2,10 +2,10 @@
 <mat-card>
 
   
-    <div *ngIf="isLoaded">
+    <!-- <div *ngIf="isLoaded">
         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-        <!-- <mat-progress-bar mode="buffer"></mat-progress-bar> -->
-    </div>
+         <mat-progress-bar mode="buffer"></mat-progress-bar> 
+    </div> -->
     
     <mat-toolbar color="primary">
         <span>Experience Details</span>
