--- a/projects/employeer/src/lib/posted-jobs/posted-jobs.component.html
+++ b/projects/employeer/src/lib/posted-jobs/posted-jobs.component.html
@@ -46,7 +46,7 @@
 
       <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
         <div>
-          <img src="../assets/image_male.png" alt="Dummy" class="example-element-diagram">
+          <img src="/assets/image_male.png" alt="Dummy" class="example-element-diagram">
         </div>
         <div class="example-element-description">
           {{element.jobDescription}}
